# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("ActsAceEtsLayoutTest") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "ace_ets_layout_column_test:ActsAceEtsLayoutColumnTest",
      "ace_ets_layout_flex_test:ActsAceEtsLayoutFlexTest",
      "ace_ets_layout_gridCol_test:ActsAceEtsLayoutGridColTest",
      "ace_ets_layout_gridRow_test:ActsAceEtsLayoutGridRowTest",
      "ace_ets_layout_grid_test:ActsAceEtsLayoutGridTest",
      "ace_ets_layout_list_test:ActsAceEtsLayoutListTest",
      "ace_ets_layout_relativeContainer_test:ActsAceEtsLayoutRelativeContainerTest",
      "ace_ets_layout_row_test:ActsAceEtsLayoutRowTest",
      "ace_ets_layout_scroll_test:ActsAceEtsLayoutScrollTest",
      "ace_ets_layout_sideBarContainer_test:ActsAceEtsLayoutSideBarContainerTest",
      "ace_ets_layout_stack_test:ActsAceEtsLayoutStackTest",
      "ace_ets_layout_swiper_test:ActsAceEtsLayoutSwiperTest",
      "ace_ets_layout_tabs_test:ActsAceEtsLayoutTabsTest",
      "ace_ets_layout_waterflow_test:ActsAceEtsLayoutWaterflowTest",
    ]
  }
}
