# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("UxFiveTest") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "ace_ets_component_Checkbox:CheckboxTest",
      "ace_ets_component_Dialog:DialogTest",
      "ace_ets_component_ModelSheet:ModelSheetTest",
      "ace_ets_component_Select:SelectTest",
      "ace_ets_component_TextfieldMulti:TextfieldMultiTest",
      "ace_ets_component_TextfieldOther:TextfieldOtherTest",
      "ace_ets_component_TextfieldSingle:TextfieldSingleTest",
    ]
  }
}
