# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("ActsAceEtsModuleUITest") {
  testonly = true
  deps = [
    "act_ets_module_commonAttrsDialog:ActsAceEtsModuleCommonAttrsDialogTest",
    "act_ets_module_commonAttrsEvents:ActsAceEtsModuleCommonAttrsEventsTest",
    "act_ets_module_commonAttrsLayout:ActsAceEtsModuleCommonAttrsLayoutTest",
    "act_ets_module_commonAttrsOther:ActsAceEtsModuleCommonAttrsOtherTest",
    "act_ets_module_commonAttrsVisual:ActsAceEtsModuleCommonAttrsVisualTest",
    "act_ets_module_commonEvents:ActsAceEtsModuleCommonEventsTest",
    "act_ets_module_dialog:ActsAceEtsModuleDialogTest",
    "act_ets_module_draw:ActsAceEtsModuleDrawTest",
    "act_ets_module_graphic:ActsAceEtsModuleGraphicTest",
    "act_ets_module_information:ActsAceEtsModuleInformationTest",
    "act_ets_module_navigation:ActsAceEtsModuleNavigationTest",
    "act_ets_module_scroll:ActsAceEtsModuleScrollTest",
  ]
}
