# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("ArkUIEtsTestUI") {
  testonly = true
  deps = [
    "arkui_ets_module_commonAttrsDialog:ArkUIEtsModuleCommonAttrsDialog",
    "arkui_ets_module_commonAttrsEvents:ArkUIEtsModuleCommonAttrsEvents",
    "arkui_ets_module_commonAttrsLayout:ArkUIEtsModuleCommonAttrsLayout",
    "arkui_ets_module_commonAttrsOther:ArkUIEtsModuleCommonAttrsOther",
    "arkui_ets_module_commonAttrsVisual:ArkUIEtsModuleCommonAttrsVisual",
    "arkui_ets_module_commonEvents:ArkUIEtsModuleCommonEvents",
    "arkui_ets_module_dialog:ArkUIEtsModuleDialog",
    "arkui_ets_module_draw:ArkUIEtsModuleDraw",
    "arkui_ets_module_graphic:ArkUIEtsModuleGraphic",
    "arkui_ets_module_information:ArkUIEtsModuleInformation",
    "arkui_ets_module_navigation:ArkUIEtsModuleNavigation",
    "arkui_ets_module_scroll:ArkUIEtsModuleScroll",
  ]
}
