# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//test/xts/tools/build/suite.gni")

ohos_js_hap_suite("ActsWebSocketNdkTest") {
  hap_profile = "entry/src/main/module.json"
  js_build_mode = "debug"
  deps = [
    ":acts_netstack_websocket_js_assets",
    ":acts_netstack_websocket_resources",
  ]
  ets2abc = true
  certificate_profile = "signature/openharmony_sx.p7b"
  hap_name = "ActsWebSocketNdkTest"
  subsystem_name = "communication"
  part_name = "netstack"
  shared_libraries = [
    "./entry/src/main/cpp:websocketndknapitest",
    ":libcppsharedso",
  ]
}

ohos_prebuilt_shared_library("libcppsharedso") {
  source = rebase_path(libcxx_ndk_shared_file)
  subsystem_name = "communication"
  part_name = "netstack"
}

ohos_app_scope("acts_netstack_websocket_app_profile") {
  app_profile = "AppScope/app.json"
  sources = [ "AppScope/resources" ]
}

ohos_js_assets("acts_netstack_websocket_js_assets") {
  source_dir = "entry/src/main/ets"
}

ohos_resources("acts_netstack_websocket_resources") {
  sources = [ "entry/src/main/resources" ]
  deps = [ ":acts_netstack_websocket_app_profile" ]
  hap_profile = "entry/src/main/module.json"
}
