# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//test/xts/tools/build/suite.gni")

ohos_app_assist_suite("ActsGlobalNapiTest_main") {
  testonly = true
  certificate_profile = "./signature/openharmony_sx.p7b"
  hap_name = "ActsGlobalNapiTestMain"
  part_name = "resource_management"
  subsystem_name = "global"
}

ohos_js_app_suite("ActsGlobalNapiTest") {
  test_hap = true
  testonly = true
  certificate_profile = "./signature/openharmony_sx.p7b"
  hap_name = "ActsGlobalNapiTest"
  part_name = "resource_management"
  subsystem_name = "global"
  deps = [ ":ActsGlobalNapiTest_main" ]
}
